Modulo de autores

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -99,11 +99,12 @@
                 </div>
 
                 <div class="nav-item">
-                    <a href="#" class="nav-link">
+                    <a asp-controller="Autor" asp-action="Index" class="nav-link">
                         <i class="fas fa-user-friends"></i>
                         <span class="nav-text">Socios y Lectores</span>
                     </a>
                 </div>
+
 
                 <div class="nav-item">
                     <a href="#" class="nav-link">
