--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -106,7 +106,8 @@
                 </div>
 
                 <div class="nav-item">
-                    <a href="#" class="nav-link">
+                    <a href="@Url.Action("Index", "Prestamos")"
+                       class="nav-link @(ViewContext.RouteData.Values["Controller"]?.ToString() == "Prestamos" ? "active" : "")">
                         <i class="fas fa-exchange-alt"></i>
                         <span class="nav-text">Préstamos y Devoluciones</span>
                     </a>
